--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <!--========================== nav ==================================== -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 
-    <a class="navbar-brand ml-4" href="#">tindog</a>
+    <a class="navbar-brand ml-4" href="#"  style="color:black ;">tindog</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tindog" aria-controls="tindog" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,13 @@
     <div class="collapse navbar-collapse" id="tindog">
       <ul class="navbar-nav ml-auto ">
         <li class="nav-item">
-          <a class="nav-link" href="#" style="color:black ;">Contact </a>
+          <a class="nav-link h4" href="#" style="color:black ;">Contact </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" style="color:black ;">Pricing </a>
+          <a class="nav-link h4" href="#" style="color:black ;">Pricing </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#" style="color:black ;">Downlod </a>
+            <a class="nav-link h4" href="#" style="color:black ;">Downlod </a>
         </li>
       </ul>
     </div>
